# miya-bot

./: .gitignore  .gitmodules  DESIGN.md  Makefile  README.md  TODO-bugs-and-design.md  install.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml  release.yml
miya/: __init__.py  __main__.py  main.py
miya/coordinator/: __init__.py  agent.py
miya/ctf/: __init__.py  agent.py  batch.py  domain.py  tools.py
miya/ctf/misc/: agent.py  (+3 more)
miya/infra/: __init__.py  config.py  emit_event_server.py  event_store.py  logging_config.py  mcp_registry.py
miya/mission/: __init__.py  service.py
miya/oneday/: __init__.py  acl.py  agent.py  domain.py  tools.py
miya/shared/: __init__.py  attack_graph.py  blackboard.py  campaign.py  events.py  ports.py  types.py
miya/topology/: __init__.py  attack_graph_topo.py  base.py  fanout_display.py  fanout_topo.py  ooda.py
miya/zeroday/: __init__.py  acl.py  agent.py  domain.py  tools.py
tests/: test_ctf_tools.py  test_oneday_domain.py  test_shared.py  test_zeroday_domain.py
tests/e2e/: test_advanced_e2e.py  test_hardened_e2e.py  test_mission_e2e.py  test_pipeline_e2e.py  test_resilience_e2e.py
tests/fixtures/: cve_scenarios.py
tests/integration/: test_agents.py  test_domain_models.py  test_event_store.py
tests/unit/: test_acl.py  test_attack_graph.py  test_batch.py  test_blackboard.py  test_deep_optimizations.py  test_events.py  test_fanout_predefined.py  test_fanout_type_safety.py  test_optimizations_v2.py  test_optimizations_v3.py  test_prepare_and_file_paths.py  test_types.py  test_validate_challenges.py  test_writeup.py
(+60 files in other folders)
