[project]
name = "miya"
version = "0.2.0"
description = "DDD Pentest Agent — 0day discovery, 1day exploitation, CTF solving"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.48,!=0.1.49,<0.2",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
miya = "miya.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
